[gd_scene load_steps=7 format=2]

[ext_resource path="res://src/prefab/floor.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/prefab/kit.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/prefab/table.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/scripts/menu.gd" type="Script" id=4]
[ext_resource path="res://src/scripts/Game_Board.gd" type="Script" id=5]
[ext_resource path="res://src/prefab/Flieband.tscn" type="PackedScene" id=6]

[node name="Game" type="Node2D"]

[node name="Game_Board" type="Node2D" parent="."]
script = ExtResource( 5 )
path = ExtResource( 1 )
table = ExtResource( 3 )
kit = ExtResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
current = true
smoothing_enabled = true

[node name="CanvasLayer" type="CanvasLayer" parent="Camera2D"]
script = ExtResource( 4 )
buildings = [ ExtResource( 6 ) ]

[node name="MoneyText" type="RichTextLabel" parent="Camera2D/CanvasLayer"]
margin_left = 24.0
margin_top = 24.0
margin_right = 128.0
margin_bottom = 64.0
text = "Money"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthText" type="RichTextLabel" parent="Camera2D/CanvasLayer"]
margin_left = 160.0
margin_top = 24.0
margin_right = 256.0
margin_bottom = 64.0
text = "Health"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreText" type="RichTextLabel" parent="Camera2D/CanvasLayer"]
margin_left = 288.0
margin_top = 24.0
margin_right = 384.0
margin_bottom = 64.0
text = "Score"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuButton" type="MenuButton" parent="Camera2D/CanvasLayer"]
margin_left = 1696.0
margin_top = 24.0
margin_right = 1760.0
margin_bottom = 64.0
text = "Menu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BuildMenue" type="MenuButton" parent="Camera2D/CanvasLayer"]
margin_left = 1824.0
margin_top = 24.0
margin_right = 1888.0
margin_bottom = 64.0
text = "Built"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="Camera2D/CanvasLayer"]
margin_left = 1768.0
margin_top = 1024.0
margin_right = 1888.0
margin_bottom = 1048.0
text = "Swap Location"
__meta__ = {
"_edit_use_anchors_": false
}
